index alterado para home

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -12,7 +12,7 @@
 <body class="wpp">
 
   <header class="header">
-    <a href="../index.html"><svg version="1.1" viewBox="0 0 2048 245" width="400" height="50" xmlns="http://www.w3.org/2000/svg">
+    <a href="../home.html"><svg version="1.1" viewBox="0 0 2048 245" width="400" height="50" xmlns="http://www.w3.org/2000/svg">
         <path transform="translate(479,37)" d="m0 0h60l13 17 9 13 13 18 14 19 13 18 7 10 4-4 12-17 14-19 10-14 26-36 4-5h60l2 2v196l-2 2-6-1-23-13-24-14-1-1-1-97-12 17-14 19-13 18-14 19-3 4h-37l-10-13-10-14-26-36-10-14-1 97-1 1h-53l-1-1v-170z" fill="#EDE1D8" />
         <path transform="translate(9,37)" d="m0 0h179l14 18 14 19 10 14v6l-13 17-8 11 7 11 10 13 4 6v6l-14 19-16 21-7 10-2 1h-178l-2-3v-167zm54 43v23h92l9-11-2-4-7-8zm0 62v24h92l9-10-2-5-7-9z" fill="#EDE1D8" />
         <path transform="translate(1455,9)" d="m0 0h6l1 1v198l-2 1h-40l-9-7-33-27-68-56-3-2-1 91-1 1h-53l-1-1v-170l1-1h39l13 11 10 8 17 14 22 18 34 28 11 9 7 6 1-93 25-15 23-13z" fill="#EDE1D8" />
@@ -48,7 +48,7 @@
 
     <nav aria-label="primária">
       <ul class="menu">
-        <li><a href="../index.html">Sobre</a></li>
+        <li><a href="../home.html">Sobre</a></li>
         <li><a href="./contato.html">Contato</a></li>
       </ul>
     </nav>
