correção dos caminhos das paginas

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -48,7 +48,7 @@
 
     <nav aria-label="primária">
       <ul class="menu">
-        <li><a href="../home.html">Sobre</a></li>
+        <li><a href="../index.html">Sobre</a></li>
         <li><a href="./contato.html">Contato</a></li>
       </ul>
     </nav>
@@ -100,7 +100,7 @@
   </main>
   <footer class="rodape">
     <p>Cada <span>desafio</span> é uma <span>oportunidade</span> disfarçada; <span>persista</span> e transforme dificuldades em <span>conquistas</span>.</p>
-</footer>
+  </footer>
   <script src="../plugins/simple-anime.js"></script>
-    <script src="../plugins/script.js"></script>
+  <script src="../plugins/script.js"></script>
 </body>
